--- a/.gitignore
+++ b/.gitignore
@@ -49,7 +49,7 @@ pytest_cache/
 *.ipynb
 
 # --- Data & model artifacts (keep placeholders/docs) ---
-data/
+data/geo/
 !data/.gitkeep
 !data/README.md
 models/
