--- a/requirements.txt
+++ b/requirements.txt
@@ -9,6 +9,7 @@ cligj==0.7.2
 cloudpickle==3.1.2
 contourpy==1.3.3
 cycler==0.12.1
+faiss-cpu==1.13.0
 fastapi==0.110.0
 fastapi-cli==0.0.16
 fiona==1.9.5
